<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeToo</string>
    <string name="metoo_srv_base_uri">10.0.2.2</string>
    <string name="metoo_srv_base_uri_LOCAL">http://127.0.0.1</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mapskey">5B:1D:1B:3D:DD:86:E9:A3:61:57:83:BF:04:7A:36:71:5B:8B:6B:8B</string>
    <string name="title_activity_map">MeToo Навигация</string>
    <string name="logo_description">MeToo Logo</string>
    <string name="wait_answer">********************
Waiting for answer..
********************</string>
    <string name="input_username">Имя пользователя</string>
    <string name="input_password">Пароль</string>
    <string name="username_occupied">Имя пользователя занято, выберите другое</string>
    <string name="login">Войти</string>
    <string name="wrong_login_passwd">Введена неверная пара логин-пароль!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_srv_url">Адрес сервера</string>
    <string name="settings_testsrv_url">Адрес тестового сервера</string>
    <string name="settings_reset_login_data">Сброс настроек пользователя</string>
    <string name="settings_splash_time">Время показа логотипа при запуске (мс)</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="test_tab_webkitview">Рендер</string>
    <string name="test_rawview">Исходник</string>
    <string name="create_event_btn_create">Создать!</string>
    <string name="input_password_one_more_time">Введите пароль ещё раз</string>
    <string name="registrate">Зарегистрироваться</string>
    <string name="title_activity_user_registration">Регистрация пользователя</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="title_activity_show_event">Просмотр события</string>
    <string name="login_as_anon">Гостевой вход</string>

</resources>