<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/teUsername"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/metoo" />







    <TextView
        android:id="@+id/lblLoginProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/wrong_login_passwd"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/error_color" />



    <TextView
        android:id="@+id/lblLoginOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/wrong_login_passwd"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/ok_color" />



    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/input_username"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <EditText
        android:id="@+id/etUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/input_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />




    <EditText
        android:id="@+id/etPasswd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>






    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/button_top_padding"
        android:text="@string/login"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnAnon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/button_top_padding"
        android:text="@string/login_as_anon"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/pbLogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

</LinearLayout>